	src/plugins/Check.py, src/plugins/ChangeTypes.py, 
	src/plugins/BookReport.py, src/plugins/Ancestors.py,
	src/plugins/AncestorReport.py, src/plugins/AncestorChart.py,
	src/plugins/AncestorChart2.py, src/Relationship.py, 
	src/Sort.py, src/GenericFilter.py, src/SubstKeywords.py,
	src/GraphLayout.py: Switch from find_* to try_to_find_* methods.

2004-05-24  Don Allingham  <dallingham@users.sourceforge.net>
	* src/PeopleModel.py: temporary fix for add person update
	* src/PeopleView.py: temporary fix for add person update

2004-05-23  Don Allingham  <dallingham@users.sourceforge.net>
	* various: transactions are now required for commits

2004-05-19  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/ReadGedcom.py: full support for undo
	* src/ImageSelect.py: undo messages
	* src/MediaView.py: undo messages
	* src/RelLib.py: use db for undo status

2004-05-19  Don Allingham  <dallingham@users.sourceforge.net>
	* various: undo messages

2004-05-18  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsCfg.py: added support for tip of the day
	* src/data/tips.xml: tip data
	* src/TipOfDay.py: support for tip of the day
	* src/gramps_main.py: support for tip of the day
	* src/const.py: support for tip of the day
	* src/gramps.glade: support for tip of the day

2004-05-16  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/RelGraph.py: Menu for family options.
	* src/plugins/RelGraph.py (_get_event_label): Typo.
	* src/plugins/ReorderIds.py: Display message and return.

2004-05-15  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/ReadGedcom.py: handle mangled temple format
	produced by some tools

2004-05-15  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/RelGraph.py (_write_graph_record): Bug fixes.
	* src/docgen/RTFDoc.py: Typo. 
	* src/ReadXML.py: Typo.

2004-05-13  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/RelLib.py (probably_alive): Typos.
	* src/Plugins.py: Do not pass parent to the reports.